# AOS

./: .clang-format  .clang-tidy  .devcontainer.json  .env.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  AGENT.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  PATCHLOG.md  PROJECT_LAYOUT.md  README.md  ROADMAP.md  SECURITY.md  aos  category_defs.h  command_map.c  commands.c  config.yml  generate_aos_mappings.py  mappings.json  nativelang.txt  newlangxbinary.txt  playwright.config.ts  providers.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  updatebinary_laang.txt  verify_all.sh
.github/: dependabot.yml
apps_src/: fileman.c  textedit.c
bare_metal_os/: Makefile  ai_trigger.c  bootloader.asm  branch.c  config.c  config_stub.c  filesystem.c  fs.c  fs_bare.h  idt.c  idt.h  kernel.c  kernel.ld  memory.c  memory.h  serial.c  serial.h  stage1.asm  stage2.asm  syscall_stubs.c  traps.c  traps.h
boot/: grub.cfg
demo/: demo_test.sh  docker-compose.yml
docs/: ARCHITECTURE.md  INDEX.md  README.md  REMAINING.md  ai_plugin.md  ai_providers.md  api.md  async_queue.md  audit.md  ci.md  ci_cd.md  command_flow.md  configuration.md  coverage.md  dashboard.md  generate_mappings.md  getting_started.md  ipc_protocol.md  merge_ai.md  openapi.json  orchestrator.md  performance.md  profiler_usage.md  security.md  system_architecture.md
examples/: ai_demo.c  ai_demo.sh  ai_service_demo.c  ai_service_demo.sh  aicell_client.c  aicell_daemon.c  aicell_demo.sh  aos_cli.c  app_demo.sh  branch_demo.c  (+35 more)
(+297 files in other folders)
