[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aos-scripts"
version = "0.1.0"
description = "Helper scripts for AOS"
authors = [{name = "AOS Team"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["scripts"]

[project.scripts]
aos-audit = "scripts.aos_audit:main"
aos = "scripts.aos:main"
[project.entry-points."flake8.extension"]
PG001 = "scripts.flake8_provider:ProviderGenerateChecker"
